--- a/Lecture-02/exercise/Introduction.Rmd
+++ b/Lecture-02/exercise/Introduction.Rmd
@@ -224,7 +224,7 @@ write.csv(g, here("data", "data.csv"),
 notebook上でdataというディレクトリを作成した場合(28行目)には, csvの書き出しの場所は以下のようにしてください.
 
 ```{r}
-write.csv(g, here("exercise", "Lecture-02", "exercise", "data", "data.csv"), 
+write.csv(g, here("Lecture-02", "exercise", "data", "data.csv"), 
           quote=FALSE, row.names=FALSE)
 ```
 
@@ -240,7 +240,7 @@ dat1 <- read.csv(here("data", "data.csv"), header = TRUE)
 ```
 もしくは
 ```{r}
-dat1 <- read.csv(here("exercise", "Lecture-02", "exercise", "data", "data.csv"), header = TRUE) 
+dat1 <- read.csv(here("Lecture-02", "exercise", "data", "data.csv"), header = TRUE) 
 ```
 
 最近増えてきているのは, readrパッケージに含まれるread_csv()関数です.
@@ -251,7 +251,7 @@ dat2 <- readr::read_csv(here("data", "data.csv"))
 ```
 もしくは
 ```{r}
-dat2 <- readr::read_csv(here("exercise", "Lecture-02", "exercise", "data", "data.csv"))
+dat2 <- readr::read_csv(here("Lecture-02", "exercise", "data", "data.csv"))
 ```
 
 最後にdata.tableパッケージのfread()関数を紹介します.
@@ -266,18 +266,23 @@ dat3 <- data.table::fread(here("data", "data.csv"),
 ```
 もしくは
 ```{r}
-dat3 <- data.table::fread(here("exercise", "Lecture-02", "exercise", "data", "data.csv"),
+dat3 <- data.table::fread(here("Lecture-02", "exercise", "data", "data.csv"),
                           data.table = FALSE)
 ```
 
 ### 速度の比較
 
 各関数によって, 読み込む速さが異なるため, 比較してみましょう.
-
 ```{r}
 system.time(read.csv(here("data", "data.csv")))
 system.time(readr::read_csv(here("data", "data.csv")))
 system.time(data.table::fread(here("data", "data.csv")))
+```
+もしくは
+```{r}
+system.time(read.csv(here("Lecture-02", "exercise", "data", "data.csv")))
+system.time(readr::read_csv(here("Lecture-02", "exercise", "data", "data.csv")))
+system.time(data.table::fread(here("Lecture-02", "exercise", "data", "data.csv")))
 ```
 
 ### 文字コード
@@ -294,6 +299,16 @@ dat1 <- read.csv(here("data", "data.csv"), header = TRUE,
 dat2 <- readr::read_csv(here("data", "data.csv"), 
                         locale=locale(encoding="UTF8"))
 write.csv(dat2, here("data", "data.csv"), 
+          quote=FALSE, row.names=FALSE,
+          fileEncoding = "UTF-8")
+```
+もしくは
+```{r}
+dat1 <- read.csv(here("Lecture-02", "exercise", "data", "data.csv"), header = TRUE, 
+                 fileEncoding = "UTF8")
+dat2 <- readr::read_csv(here("Lecture-02", "exercise", "data", "data.csv"), 
+                        locale=locale(encoding="UTF8"))
+write.csv(dat2, here("Lecture-02", "exercise", "data", "data.csv"), 
           quote=FALSE, row.names=FALSE,
           fileEncoding = "UTF-8")
 ```
