--- a/Lecture-03/exercise/variation.Rmd
+++ b/Lecture-03/exercise/variation.Rmd
@@ -9,7 +9,7 @@ output: html_notebook
 quantile()関数もデータフレームを引数にとることはできない.
 
 quantile()関数の引数としてprobs =で0～1の値を与えれば, 指定した割合に該当する数値を返す.
-また, 授業では扱わなかったが, 四分位数の求め方にはいくつかの方法があるため, どの手法を選択するのかをtype = で指定できる.
+また, 四分位数の求め方にはいくつかの方法があるため, どの手法を選択するのかをtype = で指定できる.
 
 ```{r}
 x <- 1:9
