--- a/Lecture-09/exercise/non-parametric-test.Rmd
+++ b/Lecture-09/exercise/non-parametric-test.Rmd
@@ -72,6 +72,14 @@ fisher.exact(x = Pass,
              tsmethod="minlike")
 ```
 
+### 対応のないデータにおける独立性の$\chi^2$検定
+
+対応のないデータにおける母比率の差のフィッシャーの正確検定を行うには, chisq.test()関数を利用する
+
+```{r}
+chisq.test(Pass)
+```
+
 ### 対応のあるデータ(時系列)における母比率の差のマクネマー検定
 
 対応のあるデータ(時系列)における母比率の差のマクネマー検定を行うには, mcnemar.test()関数を利用する.
